simplify needed scss classes by removing some redundancies and use vuetify's built-ins instead

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -8,3 +8,9 @@
 // @use 'vuetify/settings' with (
 //   $color-pack: false
 // );
+
+@import './background.scss';
+@import './layout.scss';
+@import './navigation.scss';
+@import './text.scss';
+@import './button.scss';
