remove a lot of custom css in favor of using vuetify inbuilts

--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -1,5 +1,5 @@
 .btn-outline {
-  text-shadow: -1px -1px 0 #0cd0f3, 1px -1px 0 #0cd0f3, -1px 1px 0 #0cd0f3, 1px 1px 0 #0cd0f3;
+  text-shadow: -1px -1px 0 transparent, 1px -1px 0 transparent, -1px 1px 0 transparent, 1px 1px 0 transparent;
   border: solid 4px rgb(var(--v-theme-secondary));
   border-color: rgb(var(--v-theme-secondary));
   border-radius: 15px;
