--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -12,5 +12,5 @@
 @import './background.scss';
 @import './layout.scss';
 @import './navigation.scss';
-@import './text.scss';
 @import './button.scss';
+@import './keyframes/util.scss';
