add some micro interactions as keyframes and hover effects

--- a/src/styles/keyframes/util.scss
+++ b/src/styles/keyframes/util.scss
@@ -64,3 +64,14 @@
     background-position: right top;
   }   
 }
+
+@keyframes jump {
+  0%,
+  100% {
+    transform: translate(0, 0);
+  }
+
+  50% {
+    transform: translate(1px, -3px);
+  }
+}
