--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -10,6 +10,7 @@
 // );
 
 @import './background.scss';
+@import './icons.scss';
 @import './layout.scss';
 @import './navigation.scss';
 @import './button.scss';
