--- a/src/styles/background.scss
+++ b/src/styles/background.scss
@@ -5,3 +5,15 @@
   background-size: 130px 150px;
   background-position: center;
 }
+
+.text-container {
+  margin: 0;
+  color: rgba(225,225,225, .01);
+  background-repeat: repeat;
+  background-clip: text;
+  -webkit-background-clip: text;
+  animation: animateText 15s ease-in-out infinite;
+  text-align: left;
+  text-transform: uppercase;
+  font-weight: 900;
+}
