--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -14,4 +14,4 @@
 @import './layout.scss';
 @import './navigation.scss';
 @import './button.scss';
-@import './keyframes/util.scss';
+@import './keyframes/main.scss';
