visual overhaul: adds more exiting styles and polish existing ones. Also uniforming spacing and padding and margins of alot of components

--- a/src/styles/background.scss
+++ b/src/styles/background.scss
@@ -4,7 +4,15 @@
   background-repeat: repeat; /* or omit this declaration */
   background-size: 130px 150px;
   background-position: center;
+
+  &-white {
+    background-image: radial-gradient(#ffffff4f 2px, transparent 0px)!important;
+    background-repeat: repeat; /* or omit this declaration */
+    background-size: 130px 150px;
+    background-position: center;
+  }
 }
+  
 
 .text-container {
   margin: 0;
